# SFCNN

./: CMakeLists.txt  README.md  activations.cpp  activations.hpp  aliases.hpp  main.cpp  nn.cpp  nn.hpp  numpyarraydata.h  wrapper.cpp  wrapper.hpp
wrapper/: config_digits.txt  dump_digits.txt  pynn.py
