project(SFCNN)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package(Armadillo REQUIRED)
include_directories(${ARMADILLO_INCLUDE_DIRS})
FILE(GLOB_RECURSE INC_ALL "*.h*")
FILE(GLOB_RECURSE SRC_ALL "*.c*")
include_directories(".")
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST} ${INC_ALL} ${SRC_ALL})
target_link_libraries(${PROJECT_NAME} ${ARMADILLO_LIBRARIES})

